--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -92,3 +92,32 @@ li{
 .dscr p{
     margin-top: 40px;
 }
+
+@media(max-width: 600px){
+ ul{
+    font-size: 1em;
+    gap: 8px;
+ }
+
+.logo{
+    font-size: 1.1em;
+    margin-left: 10px;
+}
+
+.dscr{
+    font-size: 1.2em;
+    margin-right: 0px;
+    margin-bottom: 150px;
+   background-color: white;
+   color: black;
+}
+.dscr h1{
+    letter-spacing: 0.3px;
+}
+ 
+.dscr p{
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+}
