--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -12,7 +12,6 @@
     margin-top: 30px;
     font-size: 3em;
     letter-spacing: 0.3px;
-    line-height: 50px;
    }
  
    .main-div > h2{
@@ -88,4 +87,21 @@
    .watchfl{
     margin-bottom: 20px;
     font-size: 1.5em;
+   }
+
+   @media(max-width: 500px){
+
+      .main-div > h1{
+         margin-top: 20px;
+         font-size: 2.5em;
+         letter-spacing: 0.2px;
+        }
+
+      .main-div > p{
+         font-size: 1.2em;
+         letter-spacing: 0.1px;
+         margin-bottom: 10px;
+         line-height: 30px;
+         text-align: center;
+        }
    }
