--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,6 +1,6 @@
 .main-contact{
     height: 88vh;
-    margin-top: 110px;
+    margin-top: 12vh;
     top: 0;
     left: 0;
     width: 100%;
@@ -15,8 +15,8 @@
    .contact-info{
     font-size: 1.7em;;
     box-shadow: 0px 0px 12px 5px #0000003e;
-    width: 30%;
-    height: 40%;
+    width: 35%;
+    height: 60%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -57,7 +57,7 @@
 
    .map{
     width: 50%;
-    height: 600px;
+    height: 500px;
     margin-right: 5px;
     border-radius: 20px;
     box-shadow: 0px 0px 12px 5px #0000003e;
