--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -66,7 +66,7 @@ li{
 
 .main{
     height: 89vh;
-    margin-top: 110px;
+    margin-top: 11vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
