--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     overflow: auto;
-    margin-top: 104px;
+    margin-top: 11vh;
     background-color: #e4e4e1;
    }
 
